# sprouts

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml
.sqlx/: query-063194ddd30140f3fcc538e407756d51523f1c8922e1292de6ae2fd30ca4fd24.json  query-133cc9c628fc8c6f7a1a334442d225231013665228b1785953b08bdefe60891a.json  query-180d109bc12c5b75df475cc27fb9d3946ab8832ce9c3d4c46053c3cd74057342.json  query-19bffe44a8ea11fb6d2453c8507585cb30600d47ee35fe767bf3ef785b453789.json  query-214ccf92f4279f4a523dc4a8d3ac5310a76d24e7f2bd30c3079d651f016d365b.json  query-346c80156953d10ee43b5e1870fa8c5836fc8fb0f6255415d0aaac53348d35c2.json  query-418706823d51fca67909c7ca18e6fafa47782426718f3000b9f73b46e37b65cc.json  query-4d7c1ecc7c768bcd9b34dae6bdceb9fbc961fba54cbe10a15f03a1c807effc0b.json  query-6d73392f45dc4ac20d1492cf1fd7b4de3a9a5497aca12cb8dbc4e4dde7fbc377.json  query-88c4f61e4763e2699b97b6491e554cefc6aec98e893181e7cb39a5a390d6ff07.json  query-a20ead251d0fca5562516af52eb471a088eb718a1d01020d2ec7efcd6718294f.json  query-dd95bf8c08e24e3a19b158497c16483aca1536d64ccba159962aed8f639176bb.json  query-e6baea95aca23c36e554853e9c7245efe8fc3c71f8bc0afc68345b8e49ea39ac.json  query-f830dd0d0b8737519a62849f3b439c919a44475b2678dda65f8c406a665dce8b.json
backend/: Cargo.toml  Dockerfile
backend/src/: api.rs  config.rs  lib.rs  main.rs
backend/src/api/: auth.rs  game.rs
backend/src/api/auth/: cookie.rs  login.rs  logout.rs  me.rs  register.rs  session.rs
backend/src/api/game/: create.rs  get.rs  join.rs  submit_move.rs
backend/src/api/support/: error.rs  invariant.rs  problem.rs  validation.rs
backend/src/domain/: game.rs  join_code.rs  password_hash.rs  plain_password.rs  session.rs  username.rs
docs/: 02-dockerfiles.md  03-build-push-sbom.md  04-vulnerability-scan.md  05-docker-compose.md  06-compose-viz.md
frontend/: Cargo.toml  Containerfile  Dockerfile  Trunk.toml  index.html  server.conf  style.css
frontend/src/: api.rs  app.rs  main.rs  model.rs
migrations/: 20260408223421_create_users_sessions.sql  20260410120000_create_games_moves.sql
(+4 files in other folders)
