[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["alloc", "password-hash", "rand", "std"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["with-rejection", "cookie"] }
color-eyre = "0.6"
dotenvy = "0.15"
hex = "0.4"
nutype = { version = "0.6", features = ["new_unchecked"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_fields = "0.1"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"tls-rustls-ring-native-roots",
	"postgres",
	"uuid",
	"json",
	"macros",
	"migrate",
] }
thiserror = "2"
time = "0.3"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v7"] }
