[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.7"
gloo-timers = { version = "0.4", features = ["futures"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Clipboard",
	"DomRect",
	"Element",
	"HtmlInputElement",
	"MouseEvent",
	"Navigator",
	"RequestCredentials",
	"SvgsvgElement",
	"Window",
] }
